# ZipAndHash

./: .coveragerc  .gitignore  LICENSE  README.md  example.bat  example.sh  install.bat  install.sh  install_and_test.bat  install_and_test.sh  pyproject.toml
src/zah/: __main__.py  config.py  dir_operations.py  extensions.py  hash.py  logger.py  main.py  single_instance.py  zip.py
tests/: test__main__.py  test_config.py  test_dir_operations.py  test_extensions.py  test_hash.py  test_main.py  test_single_instance.py  test_zip.py
